Update the instructions for how to register hemisphere with brainreg

--- a/tutorials/run_pipeline.ipynb
+++ b/tutorials/run_pipeline.ipynb
@@ -49,6 +49,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7049a85-d963-481c-9b73-4cd9800e3951",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# e.g. change sigma1 and wavelet to db5 removed most of the \n",
+    "# stripes\n",
+    "pystripe -i  561_destriped -o 561 --sigma1 1200 --wavelet db5"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "404014f8-768d-4fd0-8fda-bf5d5a83183d",
    "metadata": {},
@@ -58,11 +70,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85bd4300-fea9-4dd2-8df7-1b0eae6d2c7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://docs.brainglobe.info/cellfinder/image-orientation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b52b78a-0ca2-4415-8666-14f1a3df8796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Orientation\n",
+    "#You must specify the orientation of your data by using the --orientation flag. What follows must be a string in the bg-space \"initials\" form, to describe the origin voxel.\n",
+    "#When you work with a stack, the origin is the upper left corner when you show the first element stack[0, :, :] with matplotlib or when you open the stack with ImageJ. First dimension is the one that you are slicing, the second the height of the image, and the third the width of the image.\n",
+    "#If the origin of your data (first, top left voxel) is the most anterior, superior, left part of the brain, then the orientation string would be \"asl\" (anterior, superior, left), and you would use: \n",
+    "#--orientation asl\n",
+    "#The order of the three initials must be the same as the axis order (sliced plane, height, width)."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c2e7ed51-a03f-461c-9238-64140fc12bb3",
    "metadata": {},
    "source": [
     "## Step 2: Registration and Cell Dection "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9472c899-7e4c-42ac-8e89-27027cc380fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#use brainreg to register hemisphere_r or hemisphere_l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4484639f-9e0d-479b-b43b-b092080c4081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brainreg  488 MGN_31F_R_outputs -v 20 5 5 --orientation rsa --brain_geometry hemisphere_r"
    ]
   },
   {
@@ -81,6 +138,16 @@
    "metadata": {},
    "source": [
     "## Step 3: Visualize and Display Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2431d9d4-ab6a-4f89-9f92-5097111f37e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drag the cellfinder outuputs folder to napari"
    ]
   },
   {
